// SPDX-FileCopyrightText: 2022 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/abcrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-capi-v0.2.2\...abcrypt-capi-v0.2.3[0.2.3] - 2023-12-07

=== Changed

* Reduce package size

== {compare-url}/abcrypt-capi-v0.2.1\...abcrypt-capi-v0.2.2[0.2.2] - 2023-11-29

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/139[#139])

== {compare-url}/abcrypt-capi-v0.2.0\...abcrypt-capi-v0.2.1[0.2.1] - 2023-11-04

=== Changed

* Update dependencies

== {compare-url}/abcrypt-capi-v0.1.2\...abcrypt-capi-v0.2.0[0.2.0] - 2023-10-02

=== Changed

* Change functions that may causes undefined behavior or memory problems to the
  unsafe function ({pull-request-url}/95[#95])

== {compare-url}/abcrypt-capi-v0.1.1\...abcrypt-capi-v0.1.2[0.1.2] - 2023-09-29

=== Fixed

* Fix `build.rs` ({pull-request-url}/87[#87])

== {compare-url}/abcrypt-capi-v0.1.0\...abcrypt-capi-v0.1.1[0.1.1] - 2023-09-29 [YANKED]

=== Fixed

* Fix the issue where the package validation fails ({pull-request-url}/80[#80])

== {project-url}/releases/tag/abcrypt-capi-v0.1.0[0.1.0] - 2023-09-20 [YANKED]

=== Added

* Initial release