@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-capi-v0.2.3\...abcrypt-capi-v0.2.4[0.2.4] - 2024-01-07
+
+=== Changed
+
+* Change to use `bump-my-version`
+
 == {compare-url}/abcrypt-capi-v0.2.2\...abcrypt-capi-v0.2.3[0.2.3] - 2023-12-07
 
 === Changed
